Diacritic Gaming (Pt.2)
Contains the rest of the diacritic addition to Iran

--- a/GFM/localisation/0000_IranRework.csv
+++ b/GFM/localisation/0000_IranRework.csv
@@ -101,7 +101,7 @@ PROV1119;Poshtkuh;;;;;;;;;;;;;
 PROV1127;Esfahan;;;;;;;;;;;;;
 PROV1128;Soltanabad;;;;;;;;;;;;;
 PROV1136;Bûšehr;;;;;;;;;;;;;
-PROV1137;Eqlid;;;;;;;;;;;;;
+PROV1137;Eqlîd;;;;;;;;;;;;;
 PROV1138;Bandar-e Kangân;;;;;;;;;;;;;
 PROV1141;Bandar-e Lengeh;;;;;;;;;;;;;
 PROV1142;Bandar-e 'Abbâs;;;;;;;;;;;;;
@@ -125,8 +125,8 @@ PROV3316;Ilisu;;;;;;;;;;;;;
 PROV3323;Karimabad;;;;;;;;;;;;;
 PROV3325;Tel Keppe;;;;;;;;;;;;;
 PROV3348;Maku;;;;;;;;;;;;;
-PROV3350;Qa'in;;;;;;;;;;;;;
-PROV3352;Sarpol-e Zahab;;;;;;;;;;;;;
+PROV3350;Qâ'en;;;;;;;;;;;;;
+PROV3352;Serpêlli Zehaw;;;;;;;;;;;;;
 PROV3355;Lash wa Juwayn;;;;;;;;;;;;;
 PROV3356;Ghoryan;;;;;;;;;;;;;
 PROV3386;Shamakhi;;;;;;;;;;;;;
@@ -134,15 +134,15 @@ PROV3389;Anah;;;;;;;;;;;;;
 PROV3406;Abu Faterah;;;;;;;;;;;;;
 PROV935;Qurain;;;;;;;;;;;;;
 PROV3428;al-Raqqah;;;;;;;;;;;;;
-PROV3495;Kermanshah;;;;;;;;;;;;;
+PROV3495;Kermânšâh;;;;;;;;;;;;;
 PROV3496;Jîroft;;;;;;;;;;;;;
 PROV3497;Tabas;;;;;;;;;;;;;
 PROV3498;Sarakhs;;;;;;;;;;;;;
 PROV3499;Kwakwani;;;;;;;;;;;;;
-PROV3500;Qochen;;;;;;;;;;;;;
-PROV3501;Jarjaran;;;;;;;;;;;;;
+PROV3500;Qocen;;;;;;;;;;;;;
+PROV3501;Jarjarân;;;;;;;;;;;;;
 PROV3502;Dehestan;;;;;;;;;;;;;
-PROV3503;Aslanduz;;;;;;;;;;;;;
+PROV3503;Aslândûz;;;;;;;;;;;;;
 PROV3504;Marand;;;;;;;;;;;;;
 PROV3505;Kyzyl-Su;;;;;;;;;;;;;
 PROV3506;Haran;;;;;;;;;;;;;
@@ -151,7 +151,7 @@ PROV3508;Pishukan;;;;;;;;;;;;;
 PROV3509;Sandak;;;;;;;;;;;;;
 PROV3510;Kacchi;;;;;;;;;;;;;
 PROV3511;Zaranj;;;;;;;;;;;;;
-PROV3512;Dozdab;;;;;;;;;;;;;
+PROV3512;Dozdâb;;;;;;;;;;;;;
 PROV3513;Nad-i Ali;;;;;;;;;;;;;
 PROV3514;Panjdeh;;;;;;;;;;;;;
 PROV3515;Dubai;;;;;;;;;;;;;
@@ -182,13 +182,13 @@ PROV3390;Grozny;;;;;;;;;;;;;
 PROV1055;Shali;;;;;;;;;;;;;
 RUS_1102;Shirvan;;;;;;;;;;;;;
 AZB_1105;Arran;;;;;;;;;;;;;
-PER_1112;Azarbayjan-e Sharqi;;;;;;;;;;;;;
-PER_3353;Qa'inat;;;;;;;;;;;;;
-PER_3350;Azarbayjan-e Gharbi;;;;;;;;;;;;;
-PER_1122;Kordestan;;;;;;;;;;;;;
-PER_1127;Iraq-e Ajami-ye Janubi;;;;;;;;;;;;;
-PER_1121;Iraq-e Ajami-ye Shomali;;;;;;;;;;;;;
-PER_1130;Yazd va Semnan;;;;;;;;;;;;;
+PER_1112;Âzarbaîejân-e Šarqî;;;;;;;;;;;;;
+PER_3353;Qa'enât;;;;;;;;;;;;;
+PER_3350;Âzarbaîejân-e Qarbî;;;;;;;;;;;;;
+PER_1122;Kordestân;;;;;;;;;;;;;
+PER_1127;'Arâq-e Ajamî-e Jonûbî;;;;;;;;;;;;;
+PER_1121;'Arâq-e Ajamî-e Šomâlî;;;;;;;;;;;;;
+PER_1130;Yazd va Semnân;;;;;;;;;;;;;
 EGY_897;Halab;;;;;;;;;;;;;
 TUR_3300;Dayr al-Zur;;;;;;;;;;;;;
 TUR_863;Bursa;;;;;;;;;;;;;
