--- a/GFM/localisation/000_persia_map.csv
+++ b/GFM/localisation/000_persia_map.csv
@@ -56,7 +56,7 @@ PROV981;Arkhangelsk;;;;;;;;;;;;;
 PROV1020;Nizhny Novgorod;;;;;;;;;;;;;
 PROV1028;Vyatka;;;;;;;;;;;;;
 PROV1068;Ulala;;;;;;;;;;;;;
-PROV1116;Astarabad;;;;;;;;;;;;;
+PROV1116;Astarâbâd;;;;;;;;;;;;;
 PROV1137;Jahrom;;;;;;;;;;;;;
 PROV1138;Kangan;;;;;;;;;;;;;
 PROV1141;Hajjiabad;;;;;;;;;;;;;
@@ -154,7 +154,7 @@ PROV907;al-Bawda;;;;;;;;;;;;;
 PROV864;Karesi;;;;;;;;;;;;;
 PROV870;Sebin;;;;;;;;;;;;;
 PROV2419;Campo Grande;;;;;;;;;;;;;
-PROV1149;Salehabad;;;;;;;;;;;;;
+PROV1149;Sabzevâr;;;;;;;;;;;;;
 PROV1718;Timimun;;;;;;;;;;;;;
 PROV1719;In Qizam;;;;;;;;;;;;;
 PROV1720;Bashar;;;;;;;;;;;;;
