--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -252,8 +252,8 @@ PROV1082;Haishenwai;;;;;;;;;;;;;
 PROV1085;Hailanpao;;;;;;;;;;;;;
 PROV1087;Otomari;;;;;;;;;;;;;
 PROV1091;Tskhinval;;;;;;;;;;;;;
-PROV1110;Qal'eh-ye Chahriq;;;;;;;;;;;;;
-PROV1117;Sanandaj;;;;;;;;;;;;;
+PROV1110;Çehrîqê Jorîn;;;;;;;;;;;;;
+PROV1117;Sinne;;;;;;;;;;;;;
 PROV1118;Saqqez;;;;;;;;;;;;;
 PROV1119;Kermanshah;;;;;;;;;;;;;
 PROV1152;Jeddah;;;;;;;;;;;;;
@@ -602,12 +602,12 @@ PROV3345;Kozan;;;;;;;;;;;;;
 PROV3346;Ürgüp;;;;;;;;;;;;;
 PROV3347;Aleksinac;;;;;;;;;;;;;
 PROV3348;Mousiyan;;;;;;;;;;;;;
-PROV3349;Izeh;;;;;;;;;;;;;
+PROV3349;îzeh;;;;;;;;;;;;;
 PROV3350;Ganaveh;;;;;;;;;;;;;
 PROV3351;Mahshahr;;;;;;;;;;;;;
 PROV3352;Khurmal;;;;;;;;;;;;;
-PROV3353;Orumiyeh;;;;;;;;;;;;;
-PROV3354;Sabzevar;;;;;;;;;;;;;
+PROV3353;Orûmîeh;;;;;;;;;;;;;
+PROV3354;Sabzevâr;;;;;;;;;;;;;
 PROV3355;Anar Dara;;;;;;;;;;;;;
 PROV3356;Kosan;;;;;;;;;;;;;
 PROV3357;Beersheba;;;;;;;;;;;;;
@@ -1407,11 +1407,11 @@ RUS_940;Vilna;;;;;;;;;;;;;
 JAP_1086;Sakhalin;;;;;;;;;;;;;
 JAP_1088;Ezo;;;;;;;;;;;;;
 AST_1097;New Caledonia;;;;;;;;;;;;;
-PER_1116;Mazandaran;;;;;;;;;;;;;
-PER_1128;Lorestan;;;;;;;;;;;;;
+PER_1116;Mâzandarân;;;;;;;;;;;;;
+PER_1128;Lorestân;;;;;;;;;;;;;
 PER_1132;Arabestân;;;;;;;;;;;;;
-PER_1136;Fars;;;;;;;;;;;;;
-PER_1140;Kerman;;;;;;;;;;;;;
+PER_1136;Fârs;;;;;;;;;;;;;
+PER_1140;Kermân;;;;;;;;;;;;;
 AFG_1209;Pashtunistan;;;;;;;;;;;;;
 KOK_1210;Bandakshan;;;;;;;;;;;;;
 AFG_1214;Kunduz;;;;;;;;;;;;;
