--- a/GFM/localisation/darkness.csv
+++ b/GFM/localisation/darkness.csv
@@ -181,7 +181,7 @@ ENG_1297;Bombay;Bombay;Bombay;;Bombay;;;;;;;;;
 MYS_1314;Mysore;Mysore;Mysore;;Mysore;;;;;;;;;
 ENG_1317;Travancore;Travancore;Travancore;;Travancore;;;;;;;;;
 PER_1141;Larestan-Sistan;Larestan-Sistan;Larestan-Sistan;;Larestan-Sistan;;;;;;;;;
-PER_1148;Khorasan;Khorasan;Khorasan;;Khorasan;;;;;;;;;
+PER_1148;Khorâsân;Khorasan;Khorasan;;Khorasan;;;;;;;;;
 PER_1138;Khuzestan;Khuzestan;Chuzestan;;Khuzestan;;;;;;;;;
 PER_1135;Fars-Kerman;Fars-Kerman;Fars-Kerman;;Fars-Kerman;;;;;;;;;
 PER_1127;Isfahan;Isfahan;Isfahan;;Isfahan;;;;;;;;;
