--- a/GFM/localisation/text.csv
+++ b/GFM/localisation/text.csv
@@ -9493,40 +9493,40 @@ PROV1104;Sheki;Sheki;Sheki;;Sheki;;;;;;;;;
 PROV1105;Ganja;Ganja;Ganja;;Ganja;;;;;;;;;
 PROV1106;Agdam;Agdam;Agdam;;Agdam;;;;;;;;;
 PROV1107;Lankaran;Lankaran;Lankaran;;Lankaran;;;;;;;;;
-PROV1108;Tabriz;Tabriz;Tabriz;;Tabrîz;;;;;;;;;
-PROV1109;Khvoy;Khvoy;Khvoy;;Jvoy;;;;;;;;;
+PROV1108;Tabrîz;Tabriz;Tabriz;;Tabrîz;;;;;;;;;
+PROV1109;Khvoî;Khvoy;Khvoy;;Jvoy;;;;;;;;;
 PROV1111;Kerkûk;Kerkûk;Kerkûk;;Kerkûk;;;;;;;;;
-PROV1112;Ardabil;Ardabil;Ardabil;;Ardebil;;;;;;;;;
-PROV1113;Rasht;Rasht;Rasht;;Rasht;;;;;;;;;
-PROV1114;Habibabad;Noshehr;Noshehr;;Noshehr;;;;;;;;;
-PROV1115;Barforush;Barforush;Barforush;;Barforush;;;;;;;;;
+PROV1112;Ardebîl;Ardabil;Ardabil;;Ardebil;;;;;;;;;
+PROV1113;Ra¨t;Rasht;Rasht;;Rasht;;;;;;;;;
+PROV1114;Habîbâbâd;Noshehr;Noshehr;;Noshehr;;;;;;;;;
+PROV1115;Bârforû¨;Barforush;Barforush;;Barforush;;;;;;;;;
 PROV1120;Khoramabad;Khoramabad;Khoramabad;;Khoramabad;;;;;;;;;
-PROV1121;Tehran;Tehéran;Teheran;;Tehrán;;;;;;;;;
+PROV1121;Tehrân;Tehéran;Teheran;;Tehrán;;;;;;;;;
 PROV1122;Hamadan;Hamadan;Hamadan;;Hamadân;;;;;;;;;
-PROV1123;Zanjan;Zanjan;Zanjan;;Zanjan;;;;;;;;;
-PROV1124;Qazvin;Qazvin;Qazvin;;Qazvin;;;;;;;;;
+PROV1123;Zanjân;Zanjan;Zanjan;;Zanjan;;;;;;;;;
+PROV1124;Qazvîn;Qazvin;Qazvin;;Qazvin;;;;;;;;;
 PROV1125;Qom;Qom;Qom;;Qom;;;;;;;;;
-PROV1126;Semnan;Semnan;Semnan;;Semnan;;;;;;;;;
+PROV1126;Semnân;Semnan;Semnan;;Semnan;;;;;;;;;
 PROV1127;Isfahan;Ispahan;Isfahan;;Isfahán;;;;;;;;;
 PROV1128;Arak;Arak;Arak;;Arak;;;;;;;;;
-PROV1129;Kashan;Kashan;Kashan;;Kashan;;;;;;;;;
+PROV1129;Kâ¨ân;Kashan;Kashan;;Kashan;;;;;;;;;
 PROV1130;Yazd;Yazd;Yazd;;Yazd;;;;;;;;;
 PROV1131;Hoveyzeh;Hoveyzeh;Hoveyzeh;;Hoveyzeh;;;;;;;;;
 PROV1132;al-Muhammarah;Abadan;Abadan;;Âbâdân;;;;;;;;;
-PROV1133;Dezful;Dezful;Dezful;;Dezful;;;;;;;;;
+PROV1133;Dezfûl;Dezful;Dezful;;Dezful;;;;;;;;;
 PROV1134;Dehkord;Dehkord;Dehkord;;Dehkord;;;;;;;;;
-PROV1135;Shiraz;Shiraz;Shiraz;;Shîrâz;;;;;;;;;
+PROV1135;¦îrâz;Shiraz;Shiraz;;Shîrâz;;;;;;;;;
 PROV1136;Bushire;Bushire;Bushire;;Bushire;;;;;;;;;
-PROV1139;Sirjan;Sirjan;Sirjan;;Sirjan;;;;;;;;;
-PROV1140;Kerman;Kerman;Kerman;;Kermân;;;;;;;;;
+PROV1139;Sîrjân;Sirjan;Sirjan;;Sirjan;;;;;;;;;
+PROV1140;Kermân;Kerman;Kerman;;Kermân;;;;;;;;;
 PROV1142;Bandar Abbas;Bandar Abbas;Bandar Abbas;;Bandar-e 'Abbâs;;;;;;;;;
 PROV1143;Bam;Bam;Bam;;Bam;;;;;;;;;
 PROV1144;Zahedan;Zahedan;Zahedan;;Zahedan;;;;;;;;;
 PROV1146;Chabahar;Chabahar;Chabahar;;Chabahar;;;;;;;;;
-PROV1147;Mashhad;Mashhad;Mashhad;;Mashhad;;;;;;;;;
-PROV1148;Birjand;Birjand;Birjand;;Bîrjand;;;;;;;;;
-PROV1149;Sabzevar;Sabzevar;Sabzevar;;Sabzevar;;;;;;;;;
-PROV1150;Bojnurd;Bojnurd;Bojnurd;;Bojnurd;;;;;;;;;
+PROV1147;Ma¨had;Mashhad;Mashhad;;Mashhad;;;;;;;;;
+PROV1148;Bîrjand;Birjand;Birjand;;Bîrjand;;;;;;;;;
+PROV1149;Sabzevâr;Sabzevar;Sabzevar;;Sabzevar;;;;;;;;;
+PROV1150;Bojnord;Bojnurd;Bojnurd;;Bojnurd;;;;;;;;;
 PROV1151;Mecca;La Mecque;Mecca;;La Meca;;;;;;;;;
 PROV1153;Medina;Medina;Medina;;Medina;;;;;;;;;
 PROV1154;Tabuk;Tabuk;Tabuk;;Tabuk;;;;;;;;;
