hildagrim 2 the return of the mid (Tartar larp decs)

--- a/GFM/localisation/0000_GFM_Deer.csv
+++ b/GFM/localisation/0000_GFM_Deer.csv
@@ -84,9 +84,9 @@ kaz_conquer_kyrgyz_desc;§RGain 3 infamy§ Ever since Omron Khan's revolt against 
 kaz_conquer_kokand_title;Conquer the Khanate of Kokand;;;;;;;;;;;;;
 kaz_conquer_kokand_desc;§RGain 5 infamy§ Dab on the Kokand(eez nuts) §This could bring us into conflict with the Chinese if we aren't diplomatic with them.§W;;;;;;;;;;;;;
 great_tartaria1_title;Reclaim the Former Tatar Homeland;;;;;;;;;;;;;
-great_tartaria1_desc;Epic Tartaria Larp Stage 1;;;;;;;;;;;;;
+great_tartaria1_desc;The collapse of the Ulug Ulus's authority over the Slavs led to the greatest catastrophe in our history. Following Kulikovo, the Khanates fell one by one to their savagery, as we were stripped of our faith and our ways of life. With Kazan finally free from Russian tyranny, we find ourselves in a position to return the favour to those who pretended to turn our people into helots. Let Moscow weep, for the Tatars ride again, and this time our yoke shall last forevermore.;;;;;;;;;;;;;
 great_tartaria2_title;Proclaim the Empire of Great Tartaria;;;;;;;;;;;;;
-great_tartaria2_desc;Epic Tartaria Larp Stage 2;;;;;;;;;;;;;
+great_tartaria2_desc;Against impossible odds, the Russians have been expelled from our ancient domains. Not only have we managed to avenge centuries of brutality and humiliation, our brethren to the South have coalesced under our flag, finally safe from the foreigners who circled them with rapacious eyes. Yet they remain a threat, and the folly of their ambitions must be destroyed once and for all. We’ll ride further than Temüjin, our revenge more swift and brutal than that of Timur, and succeed where our forefathers failed, as Tartaria shall triumph over the test of time, Eurasia eternally subjugated to our hegemony.;;;;;;;;;;;;;
 junior_colonize_steppe_title;Consolidate the Syr Darya delta;;;;;;;;;;;;;
 junior_colonize_steppe_desc;With the Junior Jüz Kazakhs a free and independent people once again, we can consolidate the remaining disorganized territories in the Syr Darya delta and bring the Kazakhs living there into the fold.;;;;;;;;;;;;;
 unite_kazakhstan_title;Unite the Kazakh Steppe;;;;;;;;;;;;;
