--- a/GFM/localisation/0000_IranRework.csv
+++ b/GFM/localisation/0000_IranRework.csv
@@ -97,9 +97,14 @@ PROV934;Diwaniyah;;;;;;;;;;;;;
 PROV1049;Novorossiysk;;;;;;;;;;;;;
 PROV1099;Gyumri;;;;;;;;;;;;;
 PROV1105;Yelizavetpol;;;;;;;;;;;;;
-PROV1119;Poshtkuh;;;;;;;;;;;;;
-PROV1127;Esfahan;;;;;;;;;;;;;
-PROV1128;Soltanabad;;;;;;;;;;;;;
+PROV1119;Poštkûh;;;;;;;;;;;;;
+PROV1127;Esfahân;;;;;;;;;;;;;
+PROV1128;Soltânâbâd;;;;;;;;;;;;;
+PROV1113;Rašt;Rasht;Rasht;;Rasht;;;;;;;;;
+PROV1115;Bârforûš;Barforush;Barforush;;Barforush;;;;;;;;;
+PROV1129;Kâšân;Kashan;Kashan;;Kashan;;;;;;;;;
+PROV1147;Mašhad;Mashhad;Mashhad;;Mashhad;;;;;;;;;
+PROV1135;Šîrâz;Shiraz;Shiraz;;Shîrâz;;;;;;;;;
 PROV1136;Bûšehr;;;;;;;;;;;;;
 PROV1137;Eqlîd;;;;;;;;;;;;;
 PROV1138;Bandar-e Kangân;;;;;;;;;;;;;
@@ -117,14 +122,14 @@ PROV1214;Farah;;;;;;;;;;;;;
 PROV1215;Qandahar;;;;;;;;;;;;;
 PROV1219;Zhob;;;;;;;;;;;;;
 PROV1225;Skardu;;;;;;;;;;;;;
-PROV2643;Larestan;;;;;;;;;;;;;
+PROV2643;Larestân;;;;;;;;;;;;;
 PROV2664;al-Khasab;;;;;;;;;;;;;
 PROV3279;Viransehir;;;;;;;;;;;;;
 PROV3292;Fallujah;;;;;;;;;;;;;
 PROV3316;Ilisu;;;;;;;;;;;;;
 PROV3323;Karimabad;;;;;;;;;;;;;
 PROV3325;Tel Keppe;;;;;;;;;;;;;
-PROV3348;Maku;;;;;;;;;;;;;
+PROV3348;Makû;;;;;;;;;;;;;
 PROV3350;Qâ'en;;;;;;;;;;;;;
 PROV3352;Serpêlli Zehaw;;;;;;;;;;;;;
 PROV3355;Lash wa Juwayn;;;;;;;;;;;;;
@@ -188,7 +193,7 @@ PER_3350;Âzarbaîejân-e Qarbî;;;;;;;;;;;;;
 PER_1122;Kordestân;;;;;;;;;;;;;
 PER_1127;'Arâq-e Ajamî-e Jonûbî;;;;;;;;;;;;;
 PER_1121;'Arâq-e Ajamî-e Šomâlî;;;;;;;;;;;;;
-PER_1130;Yazd va Semnân;;;;;;;;;;;;;
+PER_1130;îazd va Semnân;;;;;;;;;;;;;
 EGY_897;Halab;;;;;;;;;;;;;
 TUR_3300;Dayr al-Zur;;;;;;;;;;;;;
 TUR_863;Bursa;;;;;;;;;;;;;
