--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -604,7 +604,7 @@ PROV3347;Aleksinac;;;;;;;;;;;;;
 PROV3348;Mousiyan;;;;;;;;;;;;;
 PROV3349;îzeh;;;;;;;;;;;;;
 PROV3350;Ganaveh;;;;;;;;;;;;;
-PROV3351;Mahshahr;;;;;;;;;;;;;
+PROV3351;Ma'shur;;;;;;;;;;;;;
 PROV3352;Khurmal;;;;;;;;;;;;;
 PROV3353;Orûmîeh;;;;;;;;;;;;;
 PROV3354;Sabzevâr;;;;;;;;;;;;;
