Rename Fixed and Loc Changes
T H E

--- a/GFM/localisation/00_HPM_countries.csv
+++ b/GFM/localisation/00_HPM_countries.csv
@@ -927,20 +927,20 @@ MTC_prussian_constitutionalism;Iron Confederacy;;;;;;;;;;;;;
 MTC_prussian_constitutionalism_ADJ;Assiniboine;;;;;;;;;;;;;
 MTC_hms_government;Iron Confederacy;;;;;;;;;;;;;
 MTC_hms_government_ADJ;Assiniboine;;;;;;;;;;;;;
-BLK;Blackfoot Confederacy;;;;;;;;;;;;;
+BLK;The Blackfoot Confederacy;;;;;;;;;;;;;
 BLK_ADJ;Niitsitapi;;;;;;;;;;;;;
-OJB;Three Fires Confederacy;;;;;;;;;;;;;
+OJB;The Three Fires Confederacy;;;;;;;;;;;;;
 OJB_ADJ;Ojibwe;;;;;;;;;;;;;
-OJB_absolute_empire;Tecumseh Confederation;;;;;;;;;;;;;
-OJB_semi_constitutional_empire;Tecumseh Confederation;;;;;;;;;;;;;
-OJB_constitutional_empire;Tecumseh Confederation;;;;;;;;;;;;;
-DAK;Dakota Republic;;;;;;;;;;;;;
+OJB_absolute_empire;The Tecumseh Confederation;;;;;;;;;;;;;
+OJB_semi_constitutional_empire;The Tecumseh Confederation;;;;;;;;;;;;;
+OJB_constitutional_empire;The Tecumseh Confederation;;;;;;;;;;;;;
+DAK;The Dakota Republic;;;;;;;;;;;;;
 DAK_ADJ;Dakotan;;;;;;;;;;;;;
-DAK_absolute_monarchy;Seven Fires Confederacy;;;;;;;;;;;;;
+DAK_absolute_monarchy;The Seven Fires Confederacy;;;;;;;;;;;;;
 DAK_absolute_monarchy_ADJ;Šakówin;;;;;;;;;;;;;
-DAK_prussian_constitutionalism;Seven Fires Confederacy;;;;;;;;;;;;;
+DAK_prussian_constitutionalism;The Seven Fires Confederacy;;;;;;;;;;;;;
 DAK_prussian_constitutionalism_ADJ;Šakówin;;;;;;;;;;;;;
-DAK_hms_government;Seven Fires Confederacy;;;;;;;;;;;;;
+DAK_hms_government;The Seven Fires Confederacy;;;;;;;;;;;;;
 DAK_hms_government_ADJ;Šakówin;;;;;;;;;;;;;
 DAK_reactionary;White Eagle Faction;;;;;;;;;;;;;
 DAK_conservative;Traditionalists;;;;;;;;;;;;;
@@ -1484,10 +1484,10 @@ LOS_radical;Partido Radical;Partido Radical;Partido Radical;;;;;;;;;;;
 LOS_socialist;Partido Socialist;Partido socialiste;Partido Socialist;;;;;;;;;;;
 LOS_communist;Partido Communist;Partido communiste;Partido Communist;;;;;;;;;;;
 LOS_fascist;Partido Fascist;Partido fasciste;Partido Fascist;;;;;;;;;;;
-LPL;United Provinces of la Plata;;;;;;;;;;;;;
+LPL;The United Provinces of la Plata;;;;;;;;;;;;;
 LPL_ADJ;Platine;;;;;;;;;;;;;
-LPL_proletarian_dictatorship;Platine People's Union;;;;;;;;;;;;;
-LPL_fascist_dictatorship;Platine League;;;;;;;;;;;;;
+LPL_proletarian_dictatorship;The Platine People's Union;;;;;;;;;;;;;
+LPL_fascist_dictatorship;The Platine League;;;;;;;;;;;;;
 LPL_absolute_monarchy;The Kingdom of La Plata;;;;;;;;;;;;;
 LPL_prussian_constitutionalism;The Kingdom of La Plata;;;;;;;;;;;;;
 LPL_hms_government;The Kingdom of La Plata;;;;;;;;;;;;;
@@ -3725,7 +3725,7 @@ NIG_prussian_constitutionalism;Liptako;;;;;;;;;;;;;
 NIG_prussian_constitutionalism_ADJ;Liptako;;;;;;;;;;;;;
 NIG_hms_government;Liptako;;;;;;;;;;;;;
 NIG_hms_government_ADJ;Liptako;;;;;;;;;;;;;
-LBY;Beylik of Constantine;;;;;;;;;;;;;
+LBY;The Beylik of Constantine;;;;;;;;;;;;;
 LBY_ADJ;Constantinean;;;;;;;;;;;;;
 EGB;Egba;;;;;;;;;;;;;
 EGB_ADJ;Egban;;;;;;;;;;;;;
@@ -3941,13 +3941,12 @@ MZR_constitutional_empire;Mazrui;;;;;;;;;;;;;
 MZR_constitutional_empire_ADJ;Mazrui;;;;;;;;;;;;;
 MZR_semi_constitutional_empire;Mazrui;;;;;;;;;;;;;
 MZR_semi_constitutional_empire_ADJ;Mazrui;;;;;;;;;;;;;
-BKY;Junior Horde;;;;;;;;;;;;;
-BKY_ADJ;Kazakh;;;;;;;;;;;;;
-BKY_absolute_empire;Bukey Horde;;;;;;;;;;;;;
+BKY;The Junior Jüz;;;;;;;;;;;;;
+BKY_absolute_empire;The Bukey Horde;;;;;;;;;;;;;
 BKY_absolute_empire_ADJ;Kazakh;;;;;;;;;;;;;
-BKY_constitutional_empire;Bukey Horde;;;;;;;;;;;;;
+BKY_constitutional_empire;The Bukey Horde;;;;;;;;;;;;;
 BKY_constitutional_empire_ADJ;Kazakh;;;;;;;;;;;;;
-BKY_semi_constitutional_empire;Bukey Horde;;;;;;;;;;;;;
+BKY_semi_constitutional_empire;The Bukey Horde;;;;;;;;;;;;;
 BKY_semi_constitutional_empire_ADJ;Kazakh;;;;;;;;;;;;;
 BKY_prov_gov_liberal;The Adai Uprising;;;;;;;;;;;;;
 BKY_prov_gov_liberal_ADJ;Adai;;;;;;;;;;;;;
