--- a/GFM/localisation/0_Names.csv
+++ b/GFM/localisation/0_Names.csv
@@ -103,7 +103,7 @@ BGL;Bagelkhand;Bagelkhand;Baghelkhand;Bagelkhand;Bagelkhand;Bagelkhand;Bagelkhan
 BGL_ADJ;Bagelkhandi;du Bagelkhand;Baghelkhand-;Bagelkhandi;Bagelkhandi;del Bagelkhand;Bagelkhandi;Bagelkhandi;Bagelkhandi;Bagelkhandi;Bagelkhandi;Багелкханди;Bagelkhandi;
 BIJ;Bijapur;Bidjapur;Bijapur;Bijapur;Bijapur;Bijapur;Bijapur;Bijapur;Bijapur;Bijapur;Bijapur;Биджапур;Bijapur;
 BIJ_ADJ;Bijapuri;Bidjapur;Bijapur;Bijapur;Bijapur;del Bijapur;Bijapuri;Bijapuri;Bijapuri;Bijapuri;Bijapuri;Биджапурск.;Bijapuri;
-BLA;Blackfoot;Pieds-Noirs;SchwarzfuЯ;Czarne Stopy;Pies Negros;Piedi-Neri;Blackfoot;Blackfoot;Blackfoot;Blackfoot;Blackfoot;Черноногие;Blackfoot;
+BLA;The Blackfoot;Pieds-Noirs;SchwarzfuЯ;Czarne Stopy;Pies Negros;Piedi-Neri;Blackfoot;Blackfoot;Blackfoot;Blackfoot;Blackfoot;Черноногие;Blackfoot;
 BLA_ADJ;Blackfoot;des Pieds-Noirs;SchwarzfuЯ-;Czarnych Stуp;Pies Negros;dei Piedi-Neri;Blackfoot;Blackfoot;Blackfoot;Blackfoot;Blackfoot;Черноног;Blackfoot;
 BLM;Blambangan;Blambangan;Blambangan;Blambangan;Blambangan;Blambangan;Blambagan;Blambagan;Blambagan;Blambagan;Blambangan;Бламбанган;Blambagan;
 BLM_ADJ;Blambangani;Blambanganais;Blambangan-;Blambanganu;Blambangana;del Blambangan;Blambagani;Blambagani;Blambagani;Blambagani;Blambagani;Бламбанганск.;Blambagani;
