--- a/GFM/localisation/Colonial_country_names.csv
+++ b/GFM/localisation/Colonial_country_names.csv
@@ -291,7 +291,7 @@ IRQ_colonial_company_3;Schutzgebiet Irak;;;;;;;;;;;;;
 IRQ_colonial_company;Jazira;;;;;;;;;;;;;
 IRQ_colonial_company_2;Fédération Jazirenne;;;;;;;;;;;;;
 IRQ_colonial_company_3;Schutzgebiet Jazira;;;;;;;;;;;;;
-KWT_colonial_company;Sheikhdom of Kuwait;;;;;;;;;;;;;
+KWT_colonial_company;The Sheikhdom of Kuwait;;;;;;;;;;;;;
 KWT_colonial_company_2;Koweït;;;;;;;;;;;;;
 KWT_colonial_company_3;Kuweït;;;;;;;;;;;;;
 TIG_colonial_company;Erythraea;;;;;;;;;;;;;
@@ -492,9 +492,9 @@ MLD_colonial_company;Maldives Protectorate;;;;;;;;;;;;;
 MLD_colonial_company_2;Îles Maldives;;;;;;;;;;;;;
 MLD_colonial_company_3;Malediven;;;;;;;;;;;;;
 MLD_colonial_company_4;Morujibu-Shoto;;;;;;;;;;;;;
-ALB_absolute_empire;Pashalik of Scutari;;;;;;;;;;;;;
-ALB_semi_constitutional_empire;Pashalik of Scutari;;;;;;;;;;;;;
-ALB_constitutional_empire;Pashalik of Scutari;;;;;;;;;;;;;
+ALB_absolute_empire;The Pashalik of Scutari;;;;;;;;;;;;;
+ALB_semi_constitutional_empire;The Pashalik of Scutari;;;;;;;;;;;;;
+ALB_constitutional_empire;The Pashalik of Scutari;;;;;;;;;;;;;
 ALB_colonial_company;Albania;;;;;;;;;;;;;
 ALB_colonial_company_2;Albanie;;;;;;;;;;;;;
 ALB_colonial_company_3;Albanien;;;;;;;;;;;;;
@@ -610,16 +610,16 @@ CLC_colonial_company;Cilicia;;;;;;;;;;;;;
 CLC_colonial_company_2;Cilicie;;;;;;;;;;;;;
 CLC_colonial_company_3;Kilikien;;;;;;;;;;;;;
 CLC_colonial_company_4;Cilicia;;;;;;;;;;;;;
-INL_colonial_company;United Indian Tribes;;;;;;;;;;;;;
-CHE_colonial_company;Cherokee Protectorate;;;;;;;;;;;;;
-MTC_colonial_company;Metis Protectorate;;;;;;;;;;;;;
-BLK_colonial_company;Blackfoot Protectorate;;;;;;;;;;;;;
-CRW_colonial_company;Absaroka Protectorate;;;;;;;;;;;;;
-PAW_colonial_company;Pawnee Protectorate;;;;;;;;;;;;;
-UNB_colonial_company;Dominion of Colorado;;;;;;;;;;;;;
-COM_colonial_company;Comanche Protectorate;;;;;;;;;;;;;
-DES_colonial_company;Union of Deseret;;;;;;;;;;;;;
-YAN_colonial_company;Yaqui Protectorate;;;;;;;;;;;;;
+INL_colonial_company;The United Indian Tribes;;;;;;;;;;;;;
+CHE_colonial_company;The Cherokee Protectorate;;;;;;;;;;;;;
+MTC_colonial_company;The Metis Protectorate;;;;;;;;;;;;;
+BLK_colonial_company;The Blackfoot Protectorate;;;;;;;;;;;;;
+CRW_colonial_company;The Absaroka Protectorate;;;;;;;;;;;;;
+PAW_colonial_company;The Pawnee Protectorate;;;;;;;;;;;;;
+UNB_colonial_company;The Dominion of Colorado;;;;;;;;;;;;;
+COM_colonial_company;The Comanche Protectorate;;;;;;;;;;;;;
+DES_colonial_company;The Union of Deseret;;;;;;;;;;;;;
+YAN_colonial_company;The Yaqui Protectorate;;;;;;;;;;;;;
 ROM_colonial_company_4;Rumyniya;;;;;;;;;;;;;
 WAL_colonial_company_4;Valakhiya;;;;;;;;;;;;;
 MOL_colonial_company_4;Moldaviya;;;;;;;;;;;;;
