--- a/GFM/localisation/all_event_descriptions.csv
+++ b/GFM/localisation/all_event_descriptions.csv
@@ -420,7 +420,7 @@ EVTDESC1239510;\n\nThe Brits have refused to return Bioko to us despite our revo
 EVTDESC1239509;\n\nThe Brits have returned Bioko to us in accordance with our revocation of the lease.;;;;;;;;;;;;;
 EVTDESC1239201;\n\nThe Spanish have refused to take our money, insisting that they wish to have the island returned to them.;;;;;;;;;;;;;
 EVTDESC1239202;\n\nThe Spanish have taken our money, deeming it worth more than the disease-ridden jungle island of Bioko.;;;;;;;;;;;;;
-EVTDESC3546765;\n\nAfter revolting against the Russians, we have gained independence. Should we unite with the Kazakh Juzes?;;;;;;;;;;;;;
+EVTDESC3546765;\n\nAfter revolting against the Russians, we have gained independence. What shape should our independence take?;;;;;;;;;;;;;
 EVTDESC115522;\n\nSultan Barghash sent away our diplomat, insisting that the East African slave trade is integral to Zanzibar.;;;;;;;;;;;;;
 EVTDESC115521;\n\nSultan Barghash has signed the Anglo-Zanzibari Treaty, putting an end to the East African slave trade.;;;;;;;;;;;;;
 EVTDESC115520;\n\nSir John Kirk has informed us that armed aggression is imminent unless we sign the Anglo-Zanzibari treaty and abolish the slave trade.;;;;;;;;;;;;;
