--- a/GFM/localisation/0000_IranRework.csv
+++ b/GFM/localisation/0000_IranRework.csv
@@ -23,9 +23,12 @@ AFG_semi_constitutional_empire;The Durrani Empire;;;;;;;;;;;;;
 AFG_semi_constitutional_empire_ADJ;Durrani;;;;;;;;;;;;;
 AFG_constitutional_empire;The Durrani Empire;;;;;;;;;;;;;
 AFG_constitutional_empire_ADJ;Durrani;;;;;;;;;;;;;
+AFG_absolute_monarchy;The Emirate of Kabul;;;;;;;;;;;;;
+KND_absolute_monarchy;The Emirate of Kandahar;;;;;;;;;;;;;
+HRT_absolute_monarchy;The Emirate of Herat;;;;;;;;;;;;;
 KND;Kandahar;;;;;;;;;;;;;
 KND_ADJ;Kandahari;;;;;;;;;;;;;
-MYN;Chahar Vilayets;;;;;;;;;;;;;
+MYN;The Chahar Vilayets;;;;;;;;;;;;;
 MYN_ADJ;Chahari;;;;;;;;;;;;;
 KHT;Qa'inat;;;;;;;;;;;;;
 KHT_ADJ;Qa'inati;;;;;;;;;;;;;
@@ -37,9 +40,9 @@ SHD;Shadlu;;;;;;;;;;;;;
 SHD_ADJ;Shadluyi;;;;;;;;;;;;;
 MLN_colonial_company;Milan;;;;;;;;;;;;;
 MLN_colonial_company_ADJ;Milani;;;;;;;;;;;;;
-BSR;al-Mazkur Sheikhdom;;;;;;;;;;;;;
+BSR;The al-Mazkur Sheikhdom;;;;;;;;;;;;;
 BSR_ADJ;Mazkuri;;;;;;;;;;;;;
-KGN;Kangan Sheikhdom;;;;;;;;;;;;;
+KGN;The Kangan Sheikhdom;;;;;;;;;;;;;
 KGN_ADJ;Kangani;;;;;;;;;;;;;
 KHN;Kharan;;;;;;;;;;;;;
 KHN_ADJ;Kharani;;;;;;;;;;;;;
@@ -47,7 +50,7 @@ WKH;Wakhan;;;;;;;;;;;;;
 WKH_ADJ;Wakhi;;;;;;;;;;;;;
 DRV;Darvaz;;;;;;;;;;;;;
 DRV_ADJ;Darvazi;;;;;;;;;;;;;
-QSM;Qasimi Federation;;;;;;;;;;;;;
+QSM;The Qasimi Federation;;;;;;;;;;;;;
 QSM_ADJ;Qasimi;;;;;;;;;;;;;
 KAL;The Khanate of Kalat;;;;;;;;;;;;;
 KAL_ADJ;Kalati;;;;;;;;;;;;;
@@ -120,7 +123,7 @@ PROV1208;Baluk-Barai;;;;;;;;;;;;;
 PROV1211;Qonduz;;;;;;;;;;;;;
 PROV1214;Farah;;;;;;;;;;;;;
 PROV1215;Qandahar;;;;;;;;;;;;;
-PROV1219;Zhob;;;;;;;;;;;;;
+PROV1219;Apozai;;;;;;;;;;;;;
 PROV1225;Skardu;;;;;;;;;;;;;
 PROV2643;Larestân;;;;;;;;;;;;;
 PROV2664;al-Khasab;;;;;;;;;;;;;
