--- a/GFM/localisation/FlavoursModNewCountries.csv
+++ b/GFM/localisation/FlavoursModNewCountries.csv
@@ -210,9 +210,9 @@ ION;The Ionian Islands;;;;;;;;;;;;;
 ION_democracy;The Septinsular Republic;;;;;;;;;;;;;
 HGL_ADJ;German;;;;;;;;;;;;;
 HGL;Heligoland;;;;;;;;;;;;;
-MSK_absolute_monarchy;Mosquito Kingdom;;;;;;;;;;;;;
-MSK_prussian_constitutionalism;Mosquito Kingdom;;;;;;;;;;;;;
-MSK_hms_government;Mosquito Kingdom;;;;;;;;;;;;;
+MSK_absolute_monarchy;The Mosquito Kingdom;;;;;;;;;;;;;
+MSK_prussian_constitutionalism;The Mosquito Kingdom;;;;;;;;;;;;;
+MSK_hms_government;The Mosquito Kingdom;;;;;;;;;;;;;
 MSK_dominion;Reserva Mosquitia;;;;;;;;;;;;;
 BLZ_dominion;British Honduras;;;;;;;;;;;;;
 MGL_theocracy;Bogd Khanate;;;;;;;;;;;;;
