More rename fixes

--- a/GFM/localisation/00_HPM_countries.csv
+++ b/GFM/localisation/00_HPM_countries.csv
@@ -2264,7 +2264,7 @@ TCA;Transcaucasia;;;;;;;;;;;;;
 TCA_ADJ;Transcaucasian;;;;;;;;;;;;;
 TKG_reactionary;Tokugawa-shi;;;;;;;;;;;;;
 TKS;Turkestan;;;;;;;;;;;;;
-TKS_ADJ;Turkic;;;;;;;;;;;;;
+TKS_ADJ;Turkestani;;;;;;;;;;;;;
 TKS_conservative;Royal Faction;Faction royale;Königsfraktion;;;;;;;;;;;
 TKS_liberal;The Liberal Faction;Faction libérale;Die liberale Fraktion;;;;;;;;;;;
 TKS_reactionary;The Nationalist Faction;Faction nationaliste;Die nationalistische Fraktion;;;;;;;;;;;
