--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -1017,7 +1017,7 @@ PROV3950;I-Keu-Kenk;;;;;;;;;;;;;
 PROV3951;Sululta;;;;;;;;;;;;;
 PROV3952;Arkiko;;;;;;;;;;;;;
 PROV3953;Dallol;;;;;;;;;;;;;
-PROV3954;Haj Aligholi;;;;;;;;;;;;;
+PROV3954;Hâj 'Alîqolî;;;;;;;;;;;;;
 PROV3955;Sogakope;;;;;;;;;;;;;
 PROV3956;Techiman;;;;;;;;;;;;;
 PROV3957;Materi;;;;;;;;;;;;;
