--- a/GFM/localisation/000_HPM_Misc.csv
+++ b/GFM/localisation/000_HPM_Misc.csv
@@ -434,7 +434,7 @@ PROV3545;Lake Hinkai;;;;;;;;;;;;;
 PROV3546;Lake Taihu;;;;;;;;;;;;;
 PROV3547;Tônlé Sab;;;;;;;;;;;;;
 PROV3548;Lake Qilin;;;;;;;;;;;;;
-PROV3549;Daryacheh-ye Namak;;;;;;;;;;;;;
+PROV3549;Darîâceh-îe Namak;;;;;;;;;;;;;
 PROV3550;Lake Michikamau;;;;;;;;;;;;;
 PROV3551;Mwitanzige;;;;;;;;;;;;;
 PROV3552;Sarygamysh Köli;;;;;;;;;;;;;
@@ -1595,7 +1595,7 @@ PROV3628;Lake Mweru;;;;;;;;;;;;;
 PROV3629;Kamilikuak;;;;;;;;;;;;;
 PROV3630;Garabogazköl Aylagy;;;;;;;;;;;;;
 PROV3631;Chott al-Djerid;;;;;;;;;;;;;
-PROV3632;Namakzar;;;;;;;;;;;;;
+PROV3632;Namakzâr;;;;;;;;;;;;;
 PROV3633;Wilkinkarra;;;;;;;;;;;;;
 PROV3634;Kati Thanda;;;;;;;;;;;;;
 PROV3635;Munda;;;;;;;;;;;;;
