--- a/GFM/localisation/text.csv
+++ b/GFM/localisation/text.csv
@@ -9499,7 +9499,7 @@ PROV1111;Kerkûk;Kerkûk;Kerkûk;;Kerkûk;;;;;;;;;
 PROV1112;Ardebîl;Ardabil;Ardabil;;Ardebil;;;;;;;;;
 PROV1114;Habîbâbâd;Noshehr;Noshehr;;Noshehr;;;;;;;;;
 PROV1120;Khorramâbâd;Khoramabad;Khoramabad;;Khoramabad;;;;;;;;;
-PROV1121;Tehrân;Tehéran;Teheran;;Tehrán;;;;;;;;;
+PROV1121;Tahrân;Tehéran;Teheran;;Tehrán;;;;;;;;;
 PROV1122;Hamedân;Hamadan;Hamadan;;Hamadân;;;;;;;;;
 PROV1123;Zanjân;Zanjan;Zanjan;;Zanjan;;;;;;;;;
 PROV1124;Qazvîn;Qazvin;Qazvin;;Qazvin;;;;;;;;;
