--- a/GFM/localisation/0000_IranRework.csv
+++ b/GFM/localisation/0000_IranRework.csv
@@ -159,7 +159,7 @@ PROV3508;Pishukan;;;;;;;;;;;;;
 PROV3509;Sandak;;;;;;;;;;;;;
 PROV3510;Kacchi;;;;;;;;;;;;;
 PROV3511;Zaranj;;;;;;;;;;;;;
-PROV3512;Dozdâb;;;;;;;;;;;;;
+PROV3512;Dozdab;;;;;;;;;;;;;
 PROV3513;Nad-i Ali;;;;;;;;;;;;;
 PROV3514;Panjdeh;;;;;;;;;;;;;
 PROV3515;Dubai;;;;;;;;;;;;;
