--- a/GFM/localisation/0000_IranRework.csv
+++ b/GFM/localisation/0000_IranRework.csv
@@ -196,7 +196,7 @@ PER_3350;Âzarbaîejân-e Qarbî;;;;;;;;;;;;;
 PER_1122;Kordestân;;;;;;;;;;;;;
 PER_1127;'Arâq-e Ajamî-e Jonûbî;;;;;;;;;;;;;
 PER_1121;'Arâq-e Ajamî-e Šomâlî;;;;;;;;;;;;;
-PER_1130;îazd va Semnân;;;;;;;;;;;;;
+PER_1130;îazd va Kûmeš;;;;;;;;;;;;;
 EGY_897;Halab;;;;;;;;;;;;;
 TUR_3300;Dayr al-Zur;;;;;;;;;;;;;
 TUR_863;Bursa;;;;;;;;;;;;;
