--- a/GFM/localisation/000_persia_map.csv
+++ b/GFM/localisation/000_persia_map.csv
@@ -154,7 +154,7 @@ PROV907;al-Bawda;;;;;;;;;;;;;
 PROV864;Karesi;;;;;;;;;;;;;
 PROV870;Sebin;;;;;;;;;;;;;
 PROV2419;Campo Grande;;;;;;;;;;;;;
-PROV1149;Sabzevâr;;;;;;;;;;;;;
+PROV1149;'Abbâsâbâd;;;;;;;;;;;;;
 PROV1718;Timimun;;;;;;;;;;;;;
 PROV1719;In Qizam;;;;;;;;;;;;;
 PROV1720;Bashar;;;;;;;;;;;;;
