--- a/GFM/localisation/text.csv
+++ b/GFM/localisation/text.csv
@@ -9520,7 +9520,7 @@ PROV1143;Bam;Bam;Bam;;Bam;;;;;;;;;
 PROV1144;Zahedan;Zahedan;Zahedan;;Zahedan;;;;;;;;;
 PROV1146;Chabahar;Chabahar;Chabahar;;Chabahar;;;;;;;;;
 PROV1148;Bîrjand;Birjand;Birjand;;Bîrjand;;;;;;;;;
-PROV1149;Sabzevâr;Sabzevar;Sabzevar;;Sabzevar;;;;;;;;;
+PROV1149;'Abbâsâbâd;Sabzevar;Sabzevar;;Sabzevar;;;;;;;;;
 PROV1150;Bojnord;Bojnurd;Bojnurd;;Bojnurd;;;;;;;;;
 PROV1151;Mecca;La Mecque;Mecca;;La Meca;;;;;;;;;
 PROV1153;Medina;Medina;Medina;;Medina;;;;;;;;;
