Rename changes based on Atlas' feedback

--- a/GFM/localisation/0000_IranRework.csv
+++ b/GFM/localisation/0000_IranRework.csv
@@ -109,7 +109,7 @@ PROV1129;Kâšân;Kashan;Kashan;;Kashan;;;;;;;;;
 PROV1147;Mašhad;Mashhad;Mashhad;;Mashhad;;;;;;;;;
 PROV1135;Šîrâz;Shiraz;Shiraz;;Shîrâz;;;;;;;;;
 PROV1136;Bûšehr;;;;;;;;;;;;;
-PROV1137;Eqlîd;;;;;;;;;;;;;
+PROV1137;Eghlîd;;;;;;;;;;;;;
 PROV1138;Bandar-e Kangân;;;;;;;;;;;;;
 PROV1141;Bandar-e Lengeh;;;;;;;;;;;;;
 PROV1142;Bandar-e 'Abbâs;;;;;;;;;;;;;
@@ -133,7 +133,7 @@ PROV3316;Ilisu;;;;;;;;;;;;;
 PROV3323;Karimabad;;;;;;;;;;;;;
 PROV3325;Tel Keppe;;;;;;;;;;;;;
 PROV3348;Makû;;;;;;;;;;;;;
-PROV3350;Qâ'en;;;;;;;;;;;;;
+PROV3350;Ghâ'en;;;;;;;;;;;;;
 PROV3352;Serpêlli Zehaw;;;;;;;;;;;;;
 PROV3355;Lash wa Juwayn;;;;;;;;;;;;;
 PROV3356;Ghoryan;;;;;;;;;;;;;
@@ -147,7 +147,7 @@ PROV3496;Jîroft;;;;;;;;;;;;;
 PROV3497;Tabas;;;;;;;;;;;;;
 PROV3498;Sarakhs;;;;;;;;;;;;;
 PROV3499;Kwakwani;;;;;;;;;;;;;
-PROV3500;Qochen;;;;;;;;;;;;;
+PROV3500;Ghûchân;;;;;;;;;;;;;
 PROV3501;Atabay;;;;;;;;;;;;;
 PROV3502;Dahastan;;;;;;;;;;;;;
 PROV3503;Aslândûz;;;;;;;;;;;;;
@@ -196,7 +196,7 @@ PER_3350;Âzarbaîejân-e Qarbî;;;;;;;;;;;;;
 PER_1122;Kordestân;;;;;;;;;;;;;
 PER_1127;'Arâq-e Ajamî-e Jonûbî;;;;;;;;;;;;;
 PER_1121;'Arâq-e Ajamî-e Šomâlî;;;;;;;;;;;;;
-PER_1130;îazd va Kûmeš;;;;;;;;;;;;;
+PER_1130;Yazd va Kûmeš;;;;;;;;;;;;;
 EGY_897;Halab;;;;;;;;;;;;;
 TUR_3300;Dayr al-Zur;;;;;;;;;;;;;
 TUR_863;Bursa;;;;;;;;;;;;;
