--- a/GFM/localisation/text.csv
+++ b/GFM/localisation/text.csv
@@ -9502,13 +9502,13 @@ PROV1120;Khorramâbâd;Khoramabad;Khoramabad;;Khoramabad;;;;;;;;;
 PROV1121;Tahrân;Tehéran;Teheran;;Tehrán;;;;;;;;;
 PROV1122;Hamedân;Hamadan;Hamadan;;Hamadân;;;;;;;;;
 PROV1123;Zanjân;Zanjan;Zanjan;;Zanjan;;;;;;;;;
-PROV1124;Qazvîn;Qazvin;Qazvin;;Qazvin;;;;;;;;;
-PROV1125;Qom;Qom;Qom;;Qom;;;;;;;;;
+PROV1124;Ghazvîn;Qazvin;Qazvin;;Qazvin;;;;;;;;;
+PROV1125;Ghom;Qom;Qom;;Qom;;;;;;;;;
 PROV1126;Semnân;Semnan;Semnan;;Semnan;;;;;;;;;
 PROV1127;Isfahan;Ispahan;Isfahan;;Isfahán;;;;;;;;;
 PROV1128;Arak;Arak;Arak;;Arak;;;;;;;;;
 PROV1130;îazd;Yazd;Yazd;;Yazd;;;;;;;;;
-PROV1131;Hoveyzeh;Hoveyzeh;Hoveyzeh;;Hoveyzeh;;;;;;;;;
+PROV1131;Huwayzah;Hoveyzeh;Hoveyzeh;;Hoveyzeh;;;;;;;;;
 PROV1132;al-Muhammarah;Abadan;Abadan;;Âbâdân;;;;;;;;;
 PROV1133;Dezfûl;Dezful;Dezful;;Dezful;;;;;;;;;
 PROV1134;Dehkord;Dehkord;Dehkord;;Dehkord;;;;;;;;;
@@ -9521,7 +9521,7 @@ PROV1144;Zahedan;Zahedan;Zahedan;;Zahedan;;;;;;;;;
 PROV1146;Chabahar;Chabahar;Chabahar;;Chabahar;;;;;;;;;
 PROV1148;Bîrjand;Birjand;Birjand;;Bîrjand;;;;;;;;;
 PROV1149;'Abbâsâbâd;Sabzevar;Sabzevar;;Sabzevar;;;;;;;;;
-PROV1150;Bojnord;Bojnurd;Bojnurd;;Bojnurd;;;;;;;;;
+PROV1150;Bizhenjurd;Bojnurd;Bojnurd;;Bojnurd;;;;;;;;;
 PROV1151;Mecca;La Mecque;Mecca;;La Meca;;;;;;;;;
 PROV1153;Medina;Medina;Medina;;Medina;;;;;;;;;
 PROV1154;Tabuk;Tabuk;Tabuk;;Tabuk;;;;;;;;;
