Redid all of it = (

--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -243,7 +243,7 @@ PROV1048;Yekaterinodar;;;;;;;;;;;;;
 PROV1049;Ubykhia;;;;;;;;;;;;;
 PROV1065;Nyagan;;;;;;;;;;;;;
 PROV1070;Yeniseysk;;;;;;;;;;;;;
-PROV1071;Ghešm;;;;;;;;;;;;;
+PROV1071;Qešm;;;;;;;;;;;;;
 PROV1073;Gizhiga;;;;;;;;;;;;;
 PROV1076;Nizhneudinsk;;;;;;;;;;;;;
 PROV1080;Chumikan;;;;;;;;;;;;;
@@ -254,7 +254,7 @@ PROV1087;Otomari;;;;;;;;;;;;;
 PROV1091;Tskhinval;;;;;;;;;;;;;
 PROV1110;Çehrîqê Jorîn;;;;;;;;;;;;;
 PROV1117;Sinne;;;;;;;;;;;;;
-PROV1118;Sagghez;;;;;;;;;;;;;
+PROV1118;Saqqez;;;;;;;;;;;;;
 PROV1119;Kermanshah;;;;;;;;;;;;;
 PROV1152;Jeddah;;;;;;;;;;;;;
 PROV1178;Sana'a;;;;;;;;;;;;;
@@ -602,7 +602,7 @@ PROV3345;Kozan;;;;;;;;;;;;;
 PROV3346;Ürgüp;;;;;;;;;;;;;
 PROV3347;Aleksinac;;;;;;;;;;;;;
 PROV3348;Mousiyan;;;;;;;;;;;;;
-PROV3349;îzeh;;;;;;;;;;;;;
+PROV3349;Îzeh;;;;;;;;;;;;;
 PROV3350;Ganaveh;;;;;;;;;;;;;
 PROV3351;Ma'shur;;;;;;;;;;;;;
 PROV3352;Khurmal;;;;;;;;;;;;;
