--- a/GFM/localisation/LocMergeFile.csv
+++ b/GFM/localisation/LocMergeFile.csv
@@ -2352,12 +2352,12 @@ BYZ_communist;Kommounistikó Kómma Byzantós;Kommounistikó Kómma Byzantós;Kommouni
 BYZ_fascist;Kómma ton Eleutherofróvon;Kómma ton Eleutherofróvon;Kómma ton Eleutherofróvon;;Kómma ton Eleutherofróvon;;;;;;;;;
 form_byzantine_empire;Reform the Imperium Romanum: Constantinople shall be the home of the King of Kings once more!;;;;;;;;;;;;;
 form_byzantine_empire_desc;With the collapse of the Ottoman Empire, the Ottoman claims to Imperial Roman titles, so viciously and deceitfully wrought from Greek hands in the dark year of 1453, are all fast becoming fading memories. Constantinople, the City of Man's Desire, is again, after centuries of Turkish occupation, in Greek hands. As years and time passed again, again ours they were. Basileus, proclaim our Empire restored!;Avec la chute de l’Empire ottoman, les prétentions ottomanes sur les titres de la Rome impériale, arrachés des mains grecques par traitrise et fourberie en cette sombre année 1453, ne sont plus que des souvenirs oubliés. Constantinople, la ville des désirs d’un homme, est de nouveau grecque après des siècles d’occupation turque. Tandis que les années passaient, notre heure est revenue. Basileos, proclame notre empire restauré !;Durch den Zusammenbruch des osmanischen Reiches wird von den osmanischen Ansprüchen an kaiserlich-römische Titel, die man den Griechen im schwarzen Jahr 1453 so brutal und hinterlistig entrissen hatte, bald nicht mehr als schnell verblassende Erinnerungen übrig sein. Konstantinopel, die Stadt der sieben Hügel, ist nach Jahrhunderten türkischer Besetzung nun wieder in griechischen Händen. Basileos, proklamiere unser Reich als wiederhergestellt!;;Con el colapso del Imperio Otomano, las pretensiones de los turcos con respecto a los títulos imperiales romanos, tan cruel y maliciosamente arrebatadas de manos de los griegos en el sombrío año de 1453, están quedando relegadas a la condición de mero recuerdo. Constantinopla, la 'Ciudad del Deseo del Hombre', vuelve a estar, tras siglos de ocupación turca, en manos de los griegos. Han pasado muchos años, pero todo vuelve a su lugar. ¡Basileos, proclamad la restauración de nuestro imperio!;;;;;;;;;
-BYZ_absolute_monarchy;Byzantine Empire;;;;;;;;;;;;;
-BYZ_hms_government;Byzantine Empire;;;;;;;;;;;;;
-BYZ_prussian_constitutionalism;Byzantine Empire;;;;;;;;;;;;;
-BYZ_absolute_monarchy_ADJ;Byzantine;;;;;;;;;;;;;
-BYZ_prussian_constitutionalism_ADJ;Byzantine;;;;;;;;;;;;;
-BYZ_hms_government_ADJ;Byzantine;;;;;;;;;;;;;
+BYZ_absolute_monarchy;Latin Empire;;;;;;;;;;;;;
+BYZ_hms_government;Latin Empire;;;;;;;;;;;;;
+BYZ_prussian_constitutionalism;Latin Empire;;;;;;;;;;;;;
+BYZ_absolute_monarchy_ADJ;Latin;;;;;;;;;;;;;
+BYZ_prussian_constitutionalism_ADJ;Latin;;;;;;;;;;;;;
+BYZ_hms_government_ADJ;Latin;;;;;;;;;;;;;
 BYZ_proletarian_dictatorship;Roman Worker's Republic;;;;;;;;;;;;;
 BYZ_democracy;Roman Republic;;;;;;;;;;;;;
 BYZ_fascist_dictatorship;Greater Roman Empire;;;;;;;;;;;;;
