--- a/GFM/localisation/0000_IranRework.csv
+++ b/GFM/localisation/0000_IranRework.csv
@@ -188,6 +188,7 @@ PROV3528;Ghur;;;;;;;;;;;;;
 PROV3538;Ziarat;;;;;;;;;;;;;
 PROV3390;Grozny;;;;;;;;;;;;;
 PROV1055;Shali;;;;;;;;;;;;;
+PROV4194;Qal'eh-ye Naw;;;;;;;;;;;;;
 RUS_1102;Shirvan;;;;;;;;;;;;;
 AZB_1105;Arran;;;;;;;;;;;;;
 PER_1112;Âzarbaîejân-e Šarqî;;;;;;;;;;;;;
