--- a/GFM/localisation/text.csv
+++ b/GFM/localisation/text.csv
@@ -11241,7 +11241,7 @@ PROV3228;Aðapaskaw;Lac Athabasca;Athabascasee;;Lago Athabasca;;;;;;;;;
 PROV3229;Uashteshushkau;Lac Reindeer;Reindeersee;;Lago Reindeer;;;;;;;;;
 PROV3230;Gulf of Ob;Golfe d'Ob;Golf von Ob;;Golfo de Ob;;;;;;;;;
 PROV3231;Gola Wanê;Lac Van;Van-See;;Lago Van;;;;;;;;;
-PROV3232;Darîâceh-îe Orûmîeh;Lac Urmia;Urmiasee;;Lago Urmia;;;;;;;;;
+PROV3232;Darîâcheh-îe Orûmîeh;Lac Urmia;Urmiasee;;Lago Urmia;;;;;;;;;
 PROV3233;Issyk Kul;Issyk Kul;Issyk Kul;;Issyk Kul;;;;;;;;;
 PROV3234;Tsinghai Lake;Lac Tsinghai;Tsinghai-See;;Lago Tsinghai;;;;;;;;;
 PROV3235;Lake Poyang;Lac Poyang;Poyangsee;;Lago Poyang;;;;;;;;;
