south sandwich islands gaming

--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -390,7 +390,7 @@ PROV2354;Fortaleza Protectora Argentina;;;;;;;;;;;;;
 PROV2361;Santa Fe;;;;;;;;;;;;;
 PROV2367;W'ajthokwe;;;;;;;;;;;;;
 PROV2371;Yavi;;;;;;;;;;;;;
-PROV2375;Hattunfayagasta;;;;;;;;;;;;;
+PROV2375;Chimpa;;;;;;;;;;;;;
 PROV2380;Arroyito;;;;;;;;;;;;;
 PROV2382;Chimeko;;;;;;;;;;;;;
 PROV2406;Pescadores Islands;;;;;;;;;;;;;
