Anything but finishing Central Asia

--- a/GFM/localisation/0000_IranRework.csv
+++ b/GFM/localisation/0000_IranRework.csv
@@ -17,13 +17,19 @@ PER_proletarian_dictatorship_ADJ;Iranian;;;;;;;;;;;;;
 PER_fascist_dictatorship;Iran;;;;;;;;;;;;;
 PER_radical_republic;Iranian Republic;;;;;;;;;;;;;
 PER_ADJ;Iranian;;;;;;;;;;;;;
-AFG_absolute_empire;The Durrani Empire;;;;;;;;;;;;;
-AFG_absolute_empire_ADJ;Durrani;;;;;;;;;;;;;
-AFG_semi_constitutional_empire;The Durrani Empire;;;;;;;;;;;;;
-AFG_semi_constitutional_empire_ADJ;Durrani;;;;;;;;;;;;;
-AFG_constitutional_empire;The Durrani Empire;;;;;;;;;;;;;
-AFG_constitutional_empire_ADJ;Durrani;;;;;;;;;;;;;
+AFG_absolute_empire;The Emirate of Afghanistan;;;;;;;;;;;;;
+AFG_absolute_empire_ADJ;Afghan;;;;;;;;;;;;;
+AFG_semi_constitutional_empire;The Emirate of Afghanistan;;;;;;;;;;;;;
+AFG_semi_constitutional_empire_ADJ;Afghan;;;;;;;;;;;;;
+AFG_constitutional_empire;The Emirate of Afghanistan;;;;;;;;;;;;;
+AFG_constitutional_empire_ADJ;Afghan;;;;;;;;;;;;;
 AFG_absolute_monarchy;The Emirate of Kabul;;;;;;;;;;;;;
+KND_absolute_empire;The Durrani Empire;;;;;;;;;;;;;
+KND_absolute_empire_ADJ;Durrani;;;;;;;;;;;;;
+KND_semi_constitutional_empire;The Durrani Empire;;;;;;;;;;;;;
+KND_semi_constitutional_empire_ADJ;Durrani;;;;;;;;;;;;;
+KND_constitutional_empire;The Durrani Empire;;;;;;;;;;;;;
+KND_constitutional_empire_ADJ;Durrani;;;;;;;;;;;;;
 KND_absolute_monarchy;The Emirate of Kandahar;;;;;;;;;;;;;
 HRT_absolute_monarchy;The Emirate of Herat;;;;;;;;;;;;;
 KND;Kandahar;;;;;;;;;;;;;
