--- a/GFM/localisation/000_HPM_Misc.csv
+++ b/GFM/localisation/000_HPM_Misc.csv
@@ -2653,7 +2653,11 @@ buraimi_war_desc;The Oasis of Buraimi and al-Ain have been under our influence f
 conquest_kunduz_title;The Conquest of Kunduz;;;;;;;;;;;;;
 conquest_kunduz_desc;§RGain 5 infamy§! Our Emir, Dost Mohammad Khan, aims to expand his influence in Bamiyan and Turkistan. He has proposed to send an American mercenary by the name of Josiah Harlan with an army to conquer the region. Josiah Harlan would ally with local forces and occupy the region, which could serve of great purpose to our kingdom. The region that would be conquered is, of course, Kunduz and its vassals, which have been in decline for now quite some time.;;;;;;;;;;;;;
 conquest_hazarajat_title;The Hazarajat Campaign;;;;;;;;;;;;;
-conquest_hazarajat_desc;§RGain 3 infamy§! Dost Mohammad Khan has managed to regain control over our state, but Bamyan fell to the Hazara in the chaos. We must subjugate the Hazara and reconquer what's ours.;;;;;;;;;;;;;
+conquest_hazarajat_desc;§RGain 3 infamy§! Dost Mohammad Khan has managed to regain control over our state, but Bamyan fell to the Hazara in the chaos. We must subjugate the Hazara and reconquer what's ours. §RDeclare war against Hazarajat§!;;;;;;;;;;;;;
+conquest_qalainaw_title;The Qalai-Naw Campaign;;;;;;;;;;;;;
+conquest_qalainaw_desc;§RGain 2 infamy§! Dost Mohammad Khan's recent campaign in Hazaristan has thrown the area into chaos. We can use this opportunity to conquer our rightfully claimed lands along the Murghob river.;;;;;;;;;;;;;
+conquest_ghur_title;Subjugate The Taymanis;;;;;;;;;;;;;
+conquest_ghur_desc;§RGain 1 infamy§! After Yar Mohammad Khan Alakozai’s killing of Kamran Shah Durrani and usurpation of the throne of Herat, Durrani exiles have fled to the ruler of Taiwara, Ibrahim Khan, and plot to retake the Emirate. This has incensed Yar Mohammad Khan, as he now endeavours to conquer Ghur. We must ready the banners and set off for Ghur before it’s too late! §RDeclare war against The Taymani§!;;;;;;;;;;;;;
 thosearentyourcores;These are not the attacker's cores;;;;;;;;;;;;;
 thosearentyourcores_desc;These are not the attacker's cores;;;;;;;;;;;;;
 sokoto_south_title;Bring the Jihad Southwards;;;;;;;;;;;;;
