--- a/GFM/localisation/00_HPM_map.csv
+++ b/GFM/localisation/00_HPM_map.csv
@@ -1130,7 +1130,7 @@ PROV4096;Ayapaskawiyiniwak;;;;;;;;;;;;;
 PROV4097;Neyaashiing;;;;;;;;;;;;;
 PROV4098;Fort William;;;;;;;;;;;;;
 PROV4099;Sihasapa;;;;;;;;;;;;;
-PROV4100;Yakawlang;;;;;;;;;;;;;
+PROV4100;Daulat Yar;;;;;;;;;;;;;
 PROV4101;Beesowu;;;;;;;;;;;;;
 PROV4102;Nanwuine'nan;;;;;;;;;;;;;
 PROV4103;Ammalapáshkuua;;;;;;;;;;;;;
