--- a/GFM/localisation/00_HPM_countries.csv
+++ b/GFM/localisation/00_HPM_countries.csv
@@ -3510,9 +3510,15 @@ SRR_ADJ;Serbian;;;;;;;;;;;;;
 RGU;Ragusa;;;;;;;;;;;;;
 RGU_ADJ;Ragusan;;;;;;;;;;;;;
 HAZ;Hazaristan;;;;;;;;;;;;;
-HAZ_absolute_empire;Hazarajat;;;;;;;;;;;;;
-HAZ_semi_constitutional_empire;Hazarajat;;;;;;;;;;;;;
-HAZ_constitutional_empire;Hazarajat;;;;;;;;;;;;;
+HAZ_absolute_monarchy;Hazarajat;;;;;;;;;;;;;
+HAZ_semi_constitutional_monarchy;Hazarajat;;;;;;;;;;;;;
+HAZ_constitutional_monarchy;Hazarajat;;;;;;;;;;;;;
+HAZ_absolute_empire;The Taymani;;;;;;;;;;;;;
+HAZ_semi_constitutional_empire;The Taymani;;;;;;;;;;;;;
+HAZ_constitutional_empire;The Taymani;;;;;;;;;;;;;
+HAZ_absolute_empire_ADJ;Taymani;;;;;;;;;;;;;
+HAZ_semi_constitutional_empire_ADJ;Taymani;;;;;;;;;;;;;
+HAZ_constitutional_empire_ADJ;Taymani;;;;;;;;;;;;;
 HAZ_colonial_company;Hazarajat;;;;;;;;;;;;;
 HAZ_ADJ;Hazara;;;;;;;;;;;;;
 LUR;Luristan;;;;;;;;;;;;;
