--- a/GFM/localisation/00_HPM_decisions.csv
+++ b/GFM/localisation/00_HPM_decisions.csv
@@ -1660,8 +1660,8 @@ fukoku_kyohei_title;Fukoku Kyohei;;;;;;;;;;;;;
 fukoku_kyohei_desc;Meaning 'Enrich the country, strengthen the military', this must become the objective of a unified Japan if we are to catch up with the technological advantage held by the West. We must face these barbarians at their own game, and be better at it.;;;;;;;;;;;;;
 abolish_the_han_system_title;Abolish the Han System;;;;;;;;;;;;;
 abolish_the_han_system_desc;The han system, under which the daimyo rule as feudal lords with very little central authority remaining to the government, is an antiquated relic that must be eliminated. The domains shall be replaced with prefectures, and the daimyos given roles as governors and bureaucrats. There will be resistance, but all will come to understand that this is for the greater good of Japan.;;;;;;;;;;;;;
-become_japan_title;Bunmei Kaika;;;;;;;;;;;;;
-become_japan_desc;With the embracing of Western ideas and authority slowly falling away from the Shogunate, the government will naturally pass first to the imperial court-- and eventually, with the extension of voting privileges to the landowners, to the Japanese people themselves. This is a natural process, and one the Tokugawa must embrace for the good of Japan.;;;;;;;;;;;;;
+become_japan_title;Taisei Hokan;;;;;;;;;;;;;
+become_japan_desc;§RSwitch to Imperial Japan§! With the embracing of Western ideas and authority slowly falling away from the Shogunate, the government will naturally pass first to the imperial court-- and eventually, with the extension of voting privileges to the landowners, to the Japanese people themselves. This is a natural process, and one the Tokugawa must embrace for the good of Japan.;;;;;;;;;;;;;
 bonin_administration_title;Japanese Bonin;;;;;;;;;;;;;
 bonin_administration_desc;Japan now controls the archipelago, and our modern administration will get rid of Gaijin names and change them accordingly.;;;;;;;;;;;;;
 taiwan_administration_title;Japanese Formosa;;;;;;;;;;;;;
