--- a/GFM/localisation/Colonial_country_names.csv
+++ b/GFM/localisation/Colonial_country_names.csv
@@ -610,3 +610,4 @@ ROM_colonial_company_4;Rumyniya;;;;;;;;;;;;;
 WAL_colonial_company_4;Valakhiya;;;;;;;;;;;;;
 MOL_colonial_company_4;Moldaviya;;;;;;;;;;;;;
 SIE_colonial_company_4;Transilvaniya;;;;;;;;;;;;;
+WES_colonial_company_2;Westphalie;;;;;;;;;;;;;
